--- a/Automation/Automation.App/Views/TasksPages/ScopeUI/ScopePage.xaml
+++ b/Automation/Automation.App/Views/TasksPages/ScopeUI/ScopePage.xaml
@@ -74,7 +74,7 @@
                 </Grid>
             </TabItem>
             <TabItem Header="History">
-                <components:ScopedHistory Scoped="{Binding Scoped}" />
+                <components:ScopedHistory TargetId="{Binding Scoped}" />
             </TabItem>
         </TabControl>
         <Button
