--- a/Automation/Automation.App/Views/TasksPages/WorkflowUI/WorkflowPage.xaml
+++ b/Automation/Automation.App/Views/TasksPages/WorkflowUI/WorkflowPage.xaml
@@ -18,7 +18,7 @@
                 <tasks:TaskSchedules />
             </TabItem>
             <TabItem Header="History">
-                <components:ScopedHistory Scoped="{Binding Scoped}" />
+                <components:ScopedHistory TargetId="{Binding Scoped}" />
             </TabItem>
         </TabControl>
         <Button
