--- a/Automation/Automation.App/Views/Alert.xaml
+++ b/Automation/Automation.App/Views/Alert.xaml
@@ -78,6 +78,7 @@
                 <TextBlock
                     Margin="4,0,0,0"
                     Grid.Column="1"
+                    TextWrapping="Wrap"
                     Text="{Binding Message}" />
             </Grid>
 
